RESOLVED FIXED142485
5 tests fail on Apple Mac WK2 performance bots
https://bugs.webkit.org/show_bug.cgi?id=142485
Summary 5 tests fail on Apple Mac WK2 performance bots
Csaba Osztrogonác
Reported 2015-03-09 04:47:54 PDT
Since http://trac.webkit.org/changeset/181093 Apple Mac performance bots run tests with WebKitTestRunner (WK2) instead of DumpRenderTree (WK1), and there are 5 failures since the beginning. Running Interactive/window-resize.html (72 of 144) error: Interactive/window-resize.html Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/resources/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/resources/images/parsing-model-overview.svg' FAILED Running Parser/HTML5-8266-FullRender.html (111 of 144) error: Parser/HTML5-8266-FullRender.html Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' FAILED Running Parser/HTML5-8266-ParseOnly.html (112 of 144) error: Parser/HTML5-8266-ParseOnly.html Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/demos/canvas/blue-robot/index.html' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' FAILED Running Parser/html-parser.html (114 of 144) error: Parser/html-parser.html Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' FAILED Running Parser/html5-full-render.html (115 of 144) error: Parser/html5-full-render.html Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' Could not create a sandbox extension for '/images/logo' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/content-venn.svg' Could not create a sandbox extension for '/Volumes/Data/slave/mavericks-release-perf-tests/build/PerformanceTests/Parser/images/parsing-model-overview.svg' FAILED
Attachments
Patch (2.04 KB, patch)
2015-03-10 19:34 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2015-03-10 19:00:55 PDT
The tests are actually working fine but we print a warning on stderr and that causes the tests to be marked as failing. We should silence this warning or not fail for this type of warning. The reason it fails to create a sandbox extension is because these files do not exist. Arguably, we should probably not try to create extensions for non-existing files.
Chris Dumez
Comment 2 2015-03-10 19:34:11 PDT
Chris Dumez
Comment 3 2015-03-10 20:30:12 PDT
Comment on attachment 248388 [details] Patch Clearing flags on attachment: 248388 Committed r181363: <http://trac.webkit.org/changeset/181363>
Chris Dumez
Comment 4 2015-03-10 20:30:17 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 5 2015-03-10 22:38:29 PDT
This logging was meant to help investigating bugs like rdar://problem/18921253, rdar://problem/18731910, rdar://problem/17766373, rdar://problem/10156710 and related. But given that I didn't put it to good use in two years, it seems acceptable to remove this release mode logging.
Note You need to log in before you can comment on or make changes to this bug.