5 tests fail on Apple Mac WK2 performance bots https://bugs.webkit.org/show_bug.cgi?id=142485

Reviewed by Andreas Kling.

Only log errors in debug builds if SandboxExtension::createHandle() fails
so that performance tests don't fail because of it. Such error is not
fatal and is expected under certain circumstances. In particular,
SandboxExtension::createHandle() is sometimes called for non-existing
files (e.g. from NetworkResourceLoadParameters::encode()).

* Shared/mac/SandboxExtensionMac.mm:
(WebKit::SandboxExtension::createHandle):

Canonical link: https://commits.webkit.org/160599@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181363 268f45cc-cd09-0410-ab3c-d52691b4dbfc